# saxonche-stubs

./: .gitignore  README.md  Taskfile  justfile  pyproject.toml  stubtest-allowlist.txt
saxonche-stubs/: __init__.pyi
