[project]
name = "saxonche-stubs"
version = "1.0.0"
description = "Type stubs for saxonche"
authors = [{ name = "Bastian Politycki", email = "bastian.politycki@unisg.ch" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "saxonche>=12.1.0,<14.0.0",
    "typing-extensions>=4.15",
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Bpolitycki/saxonche-stubs"

[dependency-groups]
dev = [
    "mypy>=1.11,<2",
    "ruff>=0.11,<1",
]

[tool.mypy]
mypy_path = "saxonche-stubs"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true

[tool.ruff.lint]
select = ["E", "F", "I001"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saxonche-stubs"]
